# XMPP

./: .gitignore  README.md  XMPP.cabal
Network/XMPP/: Auth.hs  JID.hs  MUC.hs  Roster.hs  Stanzas.hs  TCPConnection.hs  XMLParse.hs  XMPPMonad.hs
examples/: .gitignore  xmpp-client.hs  xmpp-component.hs
